Edited autoplay in music

--- a/Best offers.html
+++ b/Best offers.html
@@ -49,7 +49,7 @@
         </marquee>
 
     </section>
-    <audio controls autoplay>
+    <audio controls>
         <source src="Sample_song.mp3">
     </audio>
 </body>
