--- a/Contact_Return.html
+++ b/Contact_Return.html
@@ -26,7 +26,7 @@
     <a href="index.html">
     <h2>Return Home</h2>
     </a>
-    <audio controls autoplay>
+    <audio controls>
         <source src="Sample_song.mp3">
     </audio>
     
