--- a/Latest laptops.html
+++ b/Latest laptops.html
@@ -71,7 +71,7 @@
 <button type="button" onmousedown="shop_for_laptops()">Buy Now!</button>
 </center>
 <br><br>
-<audio controls autoplay>
+<audio controls >
     <source src="Sample_song.mp3">
 </audio>
 
