--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="audio">
-    <audio controls autoplay>
+    <audio controls >
         <source src="Sample_song.mp3">
     </audio>
     </div>
