--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <audio controls autoplay>
+    <audio controls >
         <source src="Sample_song.mp3">
     </audio>
     
